styles/page-poverty.less
.page-poverty {

  .the-numbers {
    // .invert();

    position: relative;
    .make-row();

    padding-bottom: 3em;
    border-bottom: 1px dotted @gray-light;

    font-size: @font-size-base;

    .number-label {
      font-size: @font-size-small;
    }

    .comparison {
      .make-sm-column(2);
      .make-sm-column-offset(1);
      .text-center();
    }

    .user-chosen {
      .make-sm-column(4);
      .make-sm-column-offset(1);
      .text-center();
    }

    .user-chosen, .comparison {
      margin-top: 1em;
    }

    .user-chosen {
      height: 80px;

      .number {
        position: relative;
        top: 5px;

        font-size: calc(@font-size-large * 2);
      }
    }



    .number {
      display: block;
      font-weight: bold;
      font-size: 130%;
    }

    cite {
      position: absolute;
      padding-left: @panel-body-padding;
      bottom: 5px;

      font-size: @font-size-small;
      font-style: italic;
    }
  }

  .controls {
    margin-top: 2em;
    .filter-controls {
      .make-row();
    }

    .filter {
      .make-xs-column(12);
      .make-sm-column(6);
      .make-md-column(3);

      margin-bottom: @padding-large-vertical;
    }

    .artist-chooser {
      width: 100%;
    }
    .define-artist {
      margin-top: 7px;
      display: block;
      text-decoration: underline;
    }
  }

  .key {
    font-size: @font-size-small;
    margin: 1em 0;
  }


}

